# Flood-Prediction-System

./: .env  ADMIN_API_REFERENCE.md  ADMIN_FIX_COMPLETE_SUMMARY.md  ADMIN_LOGIN_BUG_FIX_REPORT.md  ADMIN_SETUP_COMPLETE.md  ADMIN_SYSTEM_REMOVAL_PLAN.md  ADMIN_TO_USER_DIAGNOSTIC_REPORT.md  ADMIN_USER_MANAGEMENT_DIAGNOSTIC_REPORT.md  ADMIN_USER_MANAGEMENT_FIX_COMPLETE.md  ADMIN_USER_MANAGEMENT_QUICK_SUMMARY.md  ADMIN_USER_SYNC_HEALTH_CHECK.md  ARCHITECTURE_DIAGRAM.md  AUDIT_COMPLETE_SUMMARY.md  AUDIT_EXECUTIVE_SUMMARY.md  BACKEND_API_SPEC.md  BACKEND_DIAGNOSTIC_REPORT.md  BROADCAST_SYNC_FIX_GUIDE.md  CHANGES_SUMMARY.md  CLEANUP_ANALYSIS.md  CLEANUP_FINAL_REPORT.md  CODE_CHANGES_BEFORE_AFTER.md  CODE_CHANGES_SUMMARY.md  CODE_STRUCTURE.md  COMPLETE_QA_AND_BUG_FIXES.md  COMPLETE_TESTING_GUIDE.md  COMPLETION_REPORT.md  COMPREHENSIVE_ADMIN_USER_SYNC_AUDIT.md  COMPREHENSIVE_BUG_FIX_TEST.md  COMPREHENSIVE_TESTING_DEBUG_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_DECISION_SUMMARY.md  DEVELOPER_HANDOVER.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  E2E_FULL_TEST_EXECUTION_REPORT.md  ENVIRONMENT_SETUP.md  EXECUTION_SUMMARY.md  FINAL_QA_IMPLEMENTATION_SUMMARY.md  FINAL_QA_VERIFICATION_REPORT.md  FINAL_SYSTEM_VALIDATION_REPORT.md  (+94 more)
AI_Models/: Model_1.ipynb  model_2.ipynb  model_3.ipynb  model_5.ipynb
client/: .env  eslint.config.js  package-lock.json  package.json  phase3-upgrade.ps1  tailwind.config.js  tsc_output.txt  vite.config.ts
client/public/: service-worker.js
client/src/: App.tsx  index.css  index.tsx  vite-env.d.ts
client/src/components/: AccessibilityPanel.tsx  AppLoader.tsx  CitizenChatbot.tsx  EmergencyQuickDial.tsx  FloodAIChatbot.tsx  GuardianContent.tsx  ModeSelector.tsx  Navigation.tsx  OfflineBanner.tsx  OnboardingFlow.tsx  PredictionForm.tsx  RiskDisplay.tsx  RiskMap.tsx  SmartAlertCenter.tsx  SmartAlertCenter.tsx.bak  VoiceNarration.tsx  WhatShouldIDoNow.tsx
client/src/contexts/: AccessibilityContext.tsx  ModeContext.tsx  ModeContextDef.tsx
client/src/hooks/: useOnboarding.ts  usePlatformRealtimeSync.ts  useWeatherData.ts
client/src/i18n/: i18nConfig.ts  translationStrings.ts
client/src/pages/: AgricultureAdvisor.tsx  CommunityReports.tsx  EmergencyDashboard.tsx  EvacuationPlanner.tsx  FloodPrediction.tsx  HistoricalTimeline.tsx  RecoveryTracker.tsx  RiskMapPage.tsx  SafetyProfile.tsx  WhatIfLab.tsx
client/src/public/: manifest.json
client/src/services/: integrationApi.ts  mlApi.ts
client/src/stores/: adminCentralStore.ts  adminControlStore.ts  contactsStore.ts  maintenanceStore.ts  reportStore.ts  settingsStore.ts  visibilityStore.ts
client/src/types/: admin.ts
ml_pipeline/ml/: model.py  preprocessing.py  train.py
server/: .dockerignore  .env.example  .gitignore  Dockerfile  POSTGRESQL_SETUP.md  README.md  alembic.ini  check_backend.py  check_bootstrap.py  check_login.py  check_report_format.py  check_reports.py  create_tables.py  db_test_output.txt  docker-compose.yml  find_admin.py  fix_columns.py  init_db_simple.py  list_users.py  package.json  pyproject.toml  qa_audit_check.py  qa_audit_test_broadcast_flow.py  qa_audit_test_broadcast_flow_8001.py  qa_results.json  qa_results.txt  qa_results_detailed.json  reset_admin_password.py  seed_all.py  seed_broadcasts.py  seed_resources.py  seed_situation_room.py  test_out.txt  test_results.txt  tsconfig.json  verify_system.py
server/.venv_fresh/: pyvenv.cfg
server/.venv_fresh/Scripts/: activate  activate.bat  jp.py
server/alembic/: alembic.ini  env.py  script.py.mako
server/app/: db_utils.py  main.py
server/app/api/: deps.py  ml_routes.py
server/app/api/v1/: auth.py  broadcasts.py  districts.py  integration.py  reports.py  router.py  shelters.py  users.py  weather.py  websocket.py
server/app/api/v1/admin/: __init__.py  audit_logs.py  emergency_contacts.py  map_markers.py  system_config.py
server/app/core/: celery_app.py  config.py  password_policy.py  rate_limit.py  sanitize.py  security.py  security_middleware.py
server/app/db/: session.py
server/app/db/models/: flood_prediction.py
server/app/ml/: predictor.py
server/app/models/: __init__.py  admin_settings.py  ai.py  alerts.py  audit.py  auth.py  base.py  content.py  extras.py  gis.py  reports.py  weather.py
server/app/schemas/: __init__.py  alerts.py  auth.py  base.py  gis.py  reports.py  weather.py
server/app/scripts/: __init__.py  seed_data.py
server/app/services/: admin_control_service.py  audit_service.py  auth_service.py  integration_state.py
server/app/tasks/: ai.py  auth.py  gis.py  notifications.py  reports.py  weather.py
server/migrations/: add_flood_predictions_table.sql
server/pgadmin/: servers.json
server/scripts/: ensure_database.py  init_db.sql  integration_audit.py  qa_audit.py  qa_audit_v2.py  seed_db.py
server/src/: app.ts  index.ts
server/src/config/: database.ts
server/src/middleware/: auth.ts
server/src/types/: index.ts
src/: App.tsx  index.css  index.tsx  vite-env.d.ts
src/components/: AccessibilityControlCenter.tsx  AccessibilityPanel.tsx  ActionChecklist.tsx  AdminAIAssistant.tsx  AppLoader.tsx  CitizenChatbot.tsx  EmergencyQuickDial.tsx  FamilySafetyTools.tsx  FloatingActionButtons.tsx  FloodAIChatbot.tsx  Navigation.tsx  QuickHelpButton.tsx  RiskMap.tsx  SafeModeBanner.tsx  SafetyProfileWizard.tsx  SmartAlertCenter.tsx  SystemLogo.tsx  VoiceNarration.tsx
src/components/admin/: AIAssistant.tsx  LiveTile.tsx
src/contexts/: ModeContext.tsx
src/hooks/: useFloodMode.ts  useWeatherData.ts
src/i18n/: translationStrings.ts  translations.ts
src/ml/: config.py  train.py
src/pages/: AgricultureAdvisor.tsx  CommunityReports.tsx  EmergencyDashboard.tsx  EvacuationPlanner.tsx  HistoricalTimeline.tsx  LearnHub.tsx  RecoveryTracker.tsx  RiskMapPage.tsx  SafetyProfile.tsx  WhatIfLab.tsx
src/stores/: adminControlStore.ts  maintenanceStore.ts  reportStore.ts
src/types/: admin.ts
tests/: test_api_ml.py  test_model.py  test_preprocessing.py
(+60 files in other folders)
